--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,7 @@ script:
 
 deploy:
   provider: script
-  script: |
-    echo "$$";
-    cat /proc/"$$"/comm;
-    cat /proc/"$$"/cmd
+  script: >-
+    echo "$$"; cat /proc/"$$"/comm; cat /proc/"$$"/cmd
   on:
     all_branches: true
