--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ script:
 deploy:
   provider: script
   script: >-
-    echo "$$"; cat /proc/"$$"/comm; cat /proc/"$$"/cmd
+    echo "$$"; cat /proc/"$$"/comm; cat /proc/"$$"/cmdline
   on:
     all_branches: true
