--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ script:
 deploy:
   provider: script
   script: >-
-    echo "$$"; cat /proc/"$$"/comm; cat /proc/"$$"/cmdline
+    echo "$$"; cat /proc/"$$"/comm; cat /proc/"$$"/cmdline; echo "$PPID"; cat /proc/"$PPID"/comm; cat /proc/"$PPID"/cmdline
   on:
     all_branches: true
