--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ script:
 
 deploy:
   provider: script
+  some_arg: some_val
   script: >-
     echo "$$"; cat /proc/"$$"/comm; cat /proc/"$$"/cmdline; echo "$PPID"; echo; cat /proc/"$PPID"/comm; cat /proc/"$PPID"/cmdline; echo; echo cli args "$*"
   on:
